# humanoid-tuner

./: .gitignore  README.md  pyproject.toml
bench/: CALIBRATION.md  README.md  benchmark5010.py  benchmark_gains.py  build_motor_model.py  calibrate.py  char5010.py  characterize.py  daemon_bridge.py  device4_snapshot.json  find_speed_limit.py  fit_plant.py  fitted_plant.json  fitted_plant_geared.json  read_esc_config.py  sweep_gains.py  tune_gains.py
deploy/: README.md
docs/: DESIGN.md  EUREKA-REWARD-DESIGN.md
policy/: README.md  __init__.py
policy/reward_search/: README.md  __init__.py  analyze.py  isaac_backend.py  loop.py  optimize.py  propose.py  propose_local.py  rewards.py  sweep_inertia.py
sim/: README.md  __init__.py  actuator.py  control_law.py  metrics.py  motor_model.py  pendulum_demo.py  robust.py
sim/fitted_models/: m6c12_pitch.json  m6c12_pitch_gains.json  mad5010_roll.json  mad5010_roll_gains.json
sim/isaac/: README.md  __init__.py  agreement_test.py  build_asset.py  motor.py  paths.py  real_plant_demo.py  substrate.py  validate_m6c12_pitch.json  validate_mad5010_roll.json  validate_models.py
sim/isaac/assets/: single_joint.usd
