[project]
name = "humanoid-tuner"
version = "0.0.0"
description = "AI-assisted motor gain tuner — learned gain scheduling for real robot joints"
requires-python = ">=3.10"
dependencies = [
    # bench bridge speaks UDP/JSON to the Humanoid-Studio daemon (stdlib only for now)
    "numpy",
]

# Training/sim deps (RL framework, sim substrate) are intentionally deferred until the
# substrate decision in docs/DESIGN.md §6 is made. Add an optional group then, e.g.:
# [project.optional-dependencies]
# train = ["torch", "rsl-rl-lib", ...]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench", "sim", "policy", "deploy"]
