[project]
name = "humanoid-tuner"
version = "0.0.0"
description = "AI-assisted motor gain tuner — learned gain scheduling for real robot joints"
requires-python = ">=3.10"
dependencies = [
    # single-actuator sim + reward search (Phase 0); bench bridge is stdlib-only
    "numpy",
]

[project.optional-dependencies]
# the Eureka-style reward loop needs the Anthropic SDK to have Claude propose rewards.
# (--dry-run grades the seed rewards with no SDK/key.)
search = ["anthropic"]

# RL trainer deps (torch, rsl-rl, or an Isaac Lab substrate) are deferred until the
# inner optimizer is swapped for the real gain-scheduling policy — add a `train` group then.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench", "sim", "policy", "deploy"]
